--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,10 +3,12 @@ body {
 }
 
 header {
+    margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 40px;
+    font-size: 30px;
+    flex-direction: column;
     
 }
 
@@ -14,7 +16,8 @@ header {
     margin: 2px;
     font-size: 20px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    align-items: center;
     background-color: rgb(217, 255, 255);
     border: 4px solid gray;
     border-radius: 15px;
@@ -29,3 +32,24 @@ button {
     margin-right: 20px;
     border-radius: 5px;
 }
+
+#fillin {
+    width: 500px;
+    margin-right: 300px;
+}
+
+h2 {
+    font-size: 20px;
+}
+
+
+#text_box {
+    background-color: rgb(217, 255, 255);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 130%;
+    margin-left: 80px;
+}
+
+
