--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,55 +1,71 @@
 body {
-    background-color: rgb(187, 228, 187);
-}
-
-header {
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 30px;
-    flex-direction: column;
-    
-}
-
-.row {
-    margin: 2px;
-    font-size: 20px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    background-color: rgb(217, 255, 255);
-    border: 4px solid gray;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+    line-height: 1;
+  }
+  
+  textarea {
+    background: transparent;
+    border: none;
+    resize: none;
+    color: #000000;
+    border-left: 1px solid black;
+    padding: 10px;
+  }
+  
+  .jumbotron {
+    text-align: center;
+    background-color: transparent;
+    color: black;
+    border-radius: 0;
+    border-bottom: 10px solid black;
+  }
+  
+  .description {
+    white-space: pre-wrap;
+  }
+  
+  .time-block {
+    text-align: center;
     border-radius: 15px;
-}
-
-.time {
-    margin-left: 10px;
-}
-
-button {
-    margin-top: 20px;
-    margin-right: 20px;
-    border-radius: 5px;
-}
-
-#fillin {
-    width: 500px;
-    margin-right: 300px;
-}
-
-h2 {
+  }
+  
+  .row {
+    white-space: pre-wrap;
+    height: 80px;
+    border-top: 1px solid white;
+  }
+  
+  .hour {
+    background-color: #ffffff;
+    color: #000000;
+    border-top: 1px dashed #000000;
+  }
+  
+  .past {
+    background-color: #d3d3d3;
+    color: white;
+  }
+  
+  .present {
+    background-color: #ff6961;
+    color: white;
+  }
+  
+  .future {
+    background-color: #77dd77;
+    color: white;
+  }
+  
+  .saveBtn {
+    border-left: 1px solid black;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    background-color: #06aed5;
+    color: white;
+  }
+  
+  .saveBtn i:hover {
     font-size: 20px;
-}
-
-
-#text_box {
-    background-color: rgb(217, 255, 255);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 130%;
-    margin-left: 80px;
-}
-
-
+    transition: all 0.3s ease-in-out;
+  }
