--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,9 @@ body {
   }
   
   .saveBtn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-left: 1px solid black;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
